# trustsettle

./: .gitignore  Anchor.toml  DEPLOYED.md  LICENSE  README.md  SUBMISSION.md  SUITE.md  live_cache.json  odds_cache.json  requirements.txt  serve.py
idl/: txoracle.json
programs/settlement/: Cargo.toml
programs/settlement/src/: lib.rs
programs/settlement_native/: Cargo.toml
programs/settlement_native/src/: lib.rs
settle/: amm.py  amm_backtest.py  demo.py  edge_to_market.py  keeper.py  live.py  market.py  merkle.py  onchain.py  onchain_market.py  prodash.py  real_result.py  real_validate.py  real_validate_v3.py  sharpedge_detector.py  suite_daemon.py  txoracle.py  web.py
tests/: test_amm_backtest.py  test_real_result.py  test_settle.py  test_settle_adversarial.py  test_validate_v3.py
txline/: live_feed.py  live_mainnet.py
