[package]
name = "settlement"
version = "0.1.0"
description = "TrustSettle — trustless prediction-market settlement via CPI into txoracle::validate_stat"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "settlement"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
