[package]
name = "settlement"
version = "0.1.0"
description = "TrustSettle — trustless prediction-market settlement via CPI into txoracle::validate_stat"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "settlement"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
# Pin serde below the serde_core split (1.0.219+) — the SBF platform-tools rustc is
# older than serde_core requires, so leaving it unpinned breaks `cargo build-sbf`.
serde = "=1.0.217"
serde_derive = "=1.0.217"
