[package]
name = "settlement_native"
version = "0.1.0"
edition = "2021"
description = "TrustSettle native — lean deployable on-chain trustless settlement (keccak Merkle verify + SOL escrow)"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "=1.18.26"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
